--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
     "@sparticuz/chromium": "^140.0.0",
+    "mammoth": "^1.11.0",
     "next": "15.5.4",
-    "puppeteer-core": "^24.22.3",
+    "puppeteer": "^24.22.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
