--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "mammoth": "^1.11.0",
     "next": "15.5.4",
     "puppeteer": "^24.22.3",
+    "quill": "^2.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/quill": "^2.0.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-pdf": "^6.2.0",
